# Pill-dispenser-SmartIoTproject

./: .gitingore  CMakeLists.txt  README.md  lorareceive.py
src/: config.h  main.c
src/drivers/: appkey.h  appkey_templete.h  eeprom.c  eeprom.h  encoder&button.c  encoder&button.h  encoder.c  encoder.h  led.c  led.h  lora.c  lora.h  motor.c  motor.h  oled.c  oled.h  sensor.c  sensor.h
src/logic/: dispenser.c  dispenser.h  statemachine.c  statemachine.h
